--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.20.1",
+    "gsap": "^3.13.0",
     "matter-js": "^0.20.0",
     "next": "15.3.4",
     "ogl": "^1.0.11",
